<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="center_horizontal">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_et"
        android:autofillHints="emailAddress"
        android:hint="@string/email_et"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_et"
        android:hint="@string/password_et"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:text="@string/login_btn"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/has_not_account_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/has_not_account_tv"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:visibility="gone"/>



</LinearLayout>